--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.3.20",
+    "@apollo/client": "^3.3.21",
     "@apollo/link-context": "^2.0.0-beta.3",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -41,6 +41,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "subscriptions-transport-ws": "^0.9.19",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
