--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "apollo-server": "^2.25.1",
     "apollo-server-express": "^2.25.2",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
